syntax = "proto3";

package usermgmt;

option go_package = "UserManager/go-usermgmt-grpc;go_usermgmt_grpc";

service UserManagement{
  rpc CreateNewUser (NewUserRequest) returns (UserResponse) {}
}

message NewUserRequest{
  string name = 1;
  int32 age = 2;
}

message UserResponse{
  string name = 1;
  reserved 2;
//  int32 age = 2;
  int32  id = 3;
}

